<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/notesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:filterTouchesWhenObscured="false"
        android:gravity="center"
        android:text="@string/notes_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:lines="5"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/notesCancelButton"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/notes_cancel_button" />

        <Button
            android:id="@+id/notesSaveButton"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/notes_save_button" />

    </LinearLayout>

</LinearLayout>