<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/formTab1Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_formeditor_tab1"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF909090" />
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_officer_name" android:width="120dp" android:gravity="right" android:paddingRight="3dp"/>

            <EditText
                android:id="@+id/officerNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPersonName"/>

        </TableRow>
        

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_requesting_branch" android:width="120dp" android:gravity="right" android:paddingRight="3dp"/>

            <Spinner
                android:id="@+id/requestingBranchSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"/>

        </TableRow>

        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state" android:width="120dp" android:gravity="right" android:paddingRight="3dp"/>

            <Spinner
                android:id="@+id/stateSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"/>

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_county" android:width="120dp" android:gravity="right" android:paddingRight="3dp"/>

            <EditText
                android:id="@+id/countyEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" android:layout_weight="1"
                android:inputType="text">
            </EditText>

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_regional_manager" android:width="120dp" android:gravity="right" android:paddingRight="3dp"/>

            <Spinner
                android:id="@+id/regionalManagerSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"/>

        </TableRow>
    </TableLayout>

</LinearLayout>